--- a/admin_panel/admin_feedback/admin_feedback.css
+++ b/admin_panel/admin_feedback/admin_feedback.css
@@ -19,3 +19,41 @@
 .del_btn:hover{
     background-color:rgb(196, 35, 35) ;
 }
+.navbar-brand{
+    margin-left: 20px;
+    font-weight: 300;
+}
+.navbar-nav .nav-link {
+    position: relative;
+    transition: color 0.3s;
+}
+
+.navbar-nav .nav-link::before {
+    content: '';
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    width: 0%;
+    height: 2px;
+    background-color: #323C8D;
+    transition: width 0.3s; /* Добавляем плавную анимацию изменения ширины */
+}
+
+.navbar-nav .nav-link:hover::before {
+    width: 100%; /* Увеличиваем ширину до 100% при наведении */
+}
+.nav-link.active::before {
+    content: '';
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #323C8D;
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+
+
+
