--- a/styles/alumni.css
+++ b/styles/alumni.css
@@ -135,4 +135,9 @@ img {
     max-width: 100%;
     border-radius: 10px;
 }
-
+.text-information {
+    margin-top: 15px;
+    font-size: 19px;
+    line-height: 2;
+    margin-bottom: 20px;
+}
